<resources>
    <string name="app_name">Flashlight</string>

    <string name="email_feedback">blueroomxyz@gmail.com</string>
    <string name="rate_us">Rate us</string>
    <string name="send_feedback">Send feedback</string>
    <string name="invite_friends_to_the_app">Invite friends to the App</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="turn_on_at_startup">Turn on at startup</string>
    <string name="turn_off_at_exit">Turn off at exit</string>
    <string name="about">About</string>
    <string name="invite_friends_to_the_app2">Invite friends to the app</string>
    <string name="welcome">Welcome</string>
    <string name="to_the_torch_app">to the torch App</string>


</resources>