<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context="com.blinklab.flashlight.Settings">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        app:titleCentered="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Settings"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSettings">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_4sdp"
                android:padding="@dimen/_12sdp"
                android:text="@string/general"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="@dimen/_15ssp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_6sdp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:text="@string/turn_on_at_startup"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/checkBox" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:background="@drawable/checkbox_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/turnOffEkjxit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/turn_off_at_exit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/turnOffExit"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/checkbox_bg"
                    app:layout_constraintEnd_toEndOf="@+id/checkBox"
                    app:layout_constraintTop_toTopOf="@+id/turnOffEkjxit" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/about"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15ssp" />


                <TextView
                    android:id="@+id/inviteFriends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/invite_friends_to_the_app2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/send_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/send_feedback"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />



                <TextView
                    android:id="@+id/rate_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/rate_us"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />


                <TextView
                    android:id="@+id/flashlight_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>